--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
+    "jotai": "^2.10.1",
     "lucide-react": "^0.447.0",
     "match-sorter": "^6.3.4",
     "next": "^14.2.3",
@@ -70,6 +71,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-resizable-panels": "^0.0.63",
     "react-responsive": "^10.0.0",
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
